# xyz

./: makefile  pyproject.toml  readme.md
src/xyz_parser/: __init__.py  parser.py
