[project]
name = "xyz"
version = "0.0.01"
description = "Parser of the xyz file format. Used in chemistry."
readme = "readme.md"
requires-python = ">=3.13"
authors = [
  {name = "Paweł Wójcik", email = "the.pawel.wojcik@gmail.com"}
]
keywords = ["chemistry", "parsers"]

[project.urls]
repository = "https://github.com/the-pawel-wojcik/xyz.git"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
